@@ -80,6 +80,8 @@ Changes in Bitbake 1.9.x:
 	- SRCREV handling updates, improvements and fixes from Poky
 	- Add bb.utils.lockfile() and bb.utils.unlockfile() from Poky
 	- Add support for task selfstamp and lockfiles flags
+	- Disable task number acceleration since it can allow the tasks to run 
+	  out of sequence
 
 Changes in Bitbake 1.8.0:
 	- Release 1.7.x as a stable series
